# dartjsonclass

./: .gitignore  Makefile  README.md  example.py  jsonbase.dart  main.dart  pubspec.yaml  setup.cfg
.github/: workflow.yml
.github/workflows/: test.yml
dartjsonclass/: __main__.py  codegen.py  dartgen.py  gen.py  jsonbase.dart  parser.py  pydantic_source.py
lib/: .gitignore  jsonbase.dart
test/: djc_test.dart  jsonbase_test.dart  test_gen.py  test_parser.py
