[metadata]
name = dartjsonclass
version = 0.0.1
description = class generator for dart API clients
author = Abe Winter
author_email = awinter.public@gmail.com

[options]
packages = dartjsonclass
install_requires =
  pydantic>=1.10.0

[options.extras_require]
# todo: tests_require when supported
test =
  pytest
