[metadata]
name = dartjsonclass
version = 0.0.3
description = class generator for dart API clients
author = Abe Winter
author_email = awinter.public@gmail.com

[options]
packages = dartjsonclass
# py 3.10 because of itertools.pairwise ugh
python_requires = >3.10
install_requires =
  pydantic>=1.10.0,<2

[options.package_data]
dartjsonclass =
  jsonbase.dart

[options.extras_require]
# todo: tests_require when supported
test =
  pytest
